importando arquivos css

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,8 @@
 @import 'global.css';
 @import 'introducao.css';
+@import 'personagens.css';
+@import 'fases.css';
+@import 'ganhou.css';
+@import 'gameover.css';
+
+
