--- a/css/fases.css
+++ b/css/fases.css
@@ -139,7 +139,7 @@ ul.alternativas li {
 /* Estilizando página da segunda fase Beth */
 
 .bg-fase2-beth {
-    background-image: url(../img/gif/alienigenas.gif);
+    background-image: url(../img/gif/rick-and-morty-run-the-jewels.gif);
     background-position: center;
 }
 
