--- a/css/gameover.css
+++ b/css/gameover.css
@@ -92,7 +92,7 @@
 
 /* Estilizando perdeu Beth */
 .bg-game-over-beth{
-    background-color: #FF512F;
+    background-color:#ff522fbe;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
