alterando caminho da imagem

--- a/css/gameover.css
+++ b/css/gameover.css
@@ -1,5 +1,5 @@
 .bg-game-over{
-    background-image: url(../../../img/gif/portal-rick-and-morty.gif);
+    background-image: url(../img/gif/portal-rick-and-morty.gif);
     background-position: center;
     font-family: 'Mali', cursive;
 }
